--- a/02_YSQL_Development.ipynb
+++ b/02_YSQL_Development.ipynb
@@ -96,9 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unable to restore variable 'a', ignoring (use %store -d to forget!)\n",
+      "The error was: <class 'KeyError'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
     "%store -r\n",
@@ -241,12 +250,12 @@
    "source": [
     "#%% python, but prepared statements as sql magic\n",
     "if (NB_GITPOD_WORKSPACE_URL is None):\n",
-    "    a = %sql select fn_yb_create_stmts()\n",
+    "    stmt = %sql select fn_yb_create_stmts()\n",
     "else:\n",
     "    WORKSPACE_URL = NB_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
-    "    a = %sql select fn_yb_create_stmts(:WORKSPACE_URL)\n",
+    "    stmt = %sql select fn_yb_create_stmts(:WORKSPACE_URL)\n",
     "\n",
-    "print (a)"
+    "print(stmt)"
    ]
   },
   {
@@ -568,7 +577,7 @@
    "source": [
     "a = %sql select fn_tmp_create_stmts()\n",
     "\n",
-    "print (a)"
+    "print(stmt)"
    ]
   },
   {
