--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -228,10 +228,10 @@
     "#%% python, but prepared statements as sql magic\n",
     "\n",
     "if (NB_YB_MASTER_HOST_GITPOD_URL is None):\n",
-    "    a = %sql select fn_yb_create_stmts()\n",
+    "    stmt = %sql select fn_yb_create_stmts()\n",
     "else:\n",
-    "    a = %sql select fn_yb_create_stmts(:NB_YB_MASTER_HOST_GITPOD_URL )\n",
-    "print (a)"
+    "    stmt = %sql select fn_yb_create_stmts(:NB_YB_MASTER_HOST_GITPOD_URL )\n",
+    "print(stmt)"
    ]
   },
   {
