--- a/04_Anatomy_of_an_Index.ipynb
+++ b/04_Anatomy_of_an_Index.ipynb
@@ -223,10 +223,10 @@
     "#%% python, but prepared statements as sql magic\n",
     "\n",
     "if (NB_YB_MASTER_HOST_GITPOD_URL is None):\n",
-    "    a = %sql select fn_yb_create_stmts()\n",
+    "    stmt = %sql select fn_yb_create_stmts()\n",
     "else:\n",
-    "    a = %sql select fn_yb_create_stmts(:NB_YB_MASTER_HOST_GITPOD_URL )\n",
-    "print (a)"
+    "    stmt = %sql select fn_yb_create_stmts(:NB_YB_MASTER_HOST_GITPOD_URL )\n",
+    "print(stmt)"
    ]
   },
   {
@@ -1992,599 +1992,30 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
-    "## q6 | Hints and other features\n",
-    "With query hints, you can influence how the Query Planner generates an query plan for execution. Typically, hints exaggerate costs so that the planner chooses a different plan.\n",
-    "YugabyteDB uses the PostgreSQL pg_hint_plan extension to control query execution plans with hints. These hints are C-style comments that use a special syntax to influence the query planner.\n",
-    "Here are some of the possible YSQL query hints that you can use:\n",
-    "- SeqScan(table): Enable SeqScan on the table.\n",
-    "- NoSeqScan(table): Do not enable SeqScan on the table.\n",
-    "- IndexScan(table): Enable IndexScan on the table.\n",
-    "- IndexScan(table idx): Enable IndexScan on the table using the index idx.\n",
-    "- NoIndexScan(table): Do not enable IndexScan on the table.\n",
-    "- IndexOnlyScan(table): Enable IndexOnlyScan on the table.\n",
-    "- NoIndexOnlyScan(table): Do not enable IndexOnlyScan on the table.\n",
-    "- IndexScanRegexp(table regex): Enable index scan on the table whose indices match with the regular expression defined by regex.\n",
-    "- IndexOnlyScanRegexp(table regex): Do not enable index scan on the table whose indices match with the regular expression defined by regex\n",
+    "## Review of secondary indexes and sharding\n",
     "\n",
-    "Hints for join methods\n",
-    "Join method hints enforce the join methods for SQL statements. Using pg_hint_plan, you can specify the methodology by which tables should be joined.\n",
+    "PK in predicate will take precedence and result in index NOT being used...\n",
+    "- Can't drop or alter PK, need to rename, create new table (or similar), and select into to make change.\n",
+    "- PK can be composite (hash, and range order), and this behavior can be different if that is the case [TODO, need to cover]\n",
     "\n",
-    "- `HashJoin(t1 t2 t3 ...)`:\tJoin t1, t2, and t3 using HashJoin.\n",
-    "- `NoHashJoin(t1 t2 t3 ...)`:\tDo not join t1, t2, and t3 using HashJoin.\n",
-    "- `NestLoop(t1 t2 t3 ...)`:\tJoin t1, t2, and t3 using NestLoop join.\n",
-    "- `NoNestLoop(t1 t2 t3 ...)`:\tDo not join t1, t2, and t3 using NestLoop join."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://docs.yugabyte.com/stable/explore/query-1-performance/pg-hint-plan/"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### q6a | hints\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`/*+ SeqScan(tbl_cities) */`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SET pg_hint_plan.enable_hint=on;\n",
-    "SHOW pg_hint_plan.enable_hint;\n",
+    "Secondary index as Range \n",
+    "- Equality is performant, but when range index tablets split, may not be as great as hash index for equality\n",
+    "- Ideal for range and comparison predicates\n",
+    "- For both Equality and Comparison predicate...\n",
+    "  - When the index column is the sole column in the select command and the sole column in the predicate (no PK), the range index is the covering index, and results in Index Only Scan\n",
+    " \n",
+    "Secondary index as Hash\n",
+    "- Equality is ideal\n",
+    "  -  When the index column is the sole column in the select command and the sole column in the predicate (no PK), the range index is the covering index, and results in Index Only Scan\n",
+    "- A range or comparison predicate ignores the hash index and results in a costly Seq Scan\n",
     "\n",
-    "execute  stmt_util_metrics_snap_reset;\n",
-    "\n",
-    "explain (analyze, dist) select /*+ HashJoin(t1 t2) */ '' _\n",
-    "    , t1.*\n",
-    "from tbl_cities t1 inner join tbl_countries t2 on t1.country_id = t2.country_id\n",
-    "where 1=1 \n",
-    " -- and country_id = 233\n",
-    "and t2.iso2  = 'US'\n",
-    " -- and state_id = 1416\n",
-    " -- and state_coude = 'CA'\n",
-    "and t1.city_name = 'Alameda'\n",
-    "-- and city_id = 111088\n",
-    "-- and yb_hash_code(city_id) = yb_hash_code(111088)\n",
-    "-- limit 100\n",
-    ";"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "q6a | Explain plan (above ^^)\n",
-    "```\n",
-    "Index Scan using idx_cities_city_name_hash on tbl_cities (cost=0.00..5.22 rows=10 width=2170) (actual time=27.365..27.376 rows=2 loops=1)\n",
-    "  Index Cond: ((city_name)::text = 'Alameda'::text)\n",
-    "  Storage Table Read Requests: 1\n",
-    "  Storage Table Read Execution Time: 2.568 ms\n",
-    "  Storage Index Read Requests: 1\n",
-    "  Storage Index Read Execution Time: 20.824 ms\n",
-    "Planning Time: 0.152 ms\n",
-    "Execution Time: 27.437 ms\n",
-    "Storage Read Requests: 2\n",
-    "Storage Read Execution Time: 23.393 ms\n",
-    "Storage Write Requests: 0\n",
-    "Catalog Read Requests: 1\n",
-    "Catalog Read Execution Time: 13.757 ms\n",
-    "Catalog Write Requests: 0\n",
-    "Storage Flush Requests: 0\n",
-    "Storage Execution Time: 37.150 ms\n",
-    "Peak Memory Usage: 8 kB\n",
-    "```\n",
-    "- Seq Scan is the same as Full Scan of the table\n",
-    "- Filter remove Y rows out of X, `Rows Removed by Filter: 148264`\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "execute  stmt_util_metrics_snap_table;"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Metrics (above ^^)\n",
-    "- All tablet leaders\n",
-    "- Seek in all tablet offsets\n",
-    "  - Next to read values after seek\n",
-    "  - Seek again for another value\n",
-    "  - Seek/next ratio is around 1:19+ (can reduce by narrow columns)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### q6b | No PK or IDX, but New Distributed Features\n",
-    "- Seq Scan\n",
-    "- Enable Pushdown\n",
-    "- Follower reads\n",
-    "- Combo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "drop index if exists idx_cities_city_name;\n",
-    "drop index if exists idx_cities_city_name_range;\n",
-    "drop index if exists idx_cities_city_name_hash;\n",
-    "drop index if exists idx_cities_city_name_covering_US;\n",
-    "drop index if exists idx_cities_city_name_exp;"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Enable Pushdown\n",
-    "```\n",
-    "name        | yb_enable_expression_pushdown\n",
-    "setting     | off\n",
-    "description | Push supported expressions down to DocDB for evaluation.\n",
-    "```\n",
-    "Set to true = on, set to false = off."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SET yb_enable_expression_pushdown=on;\n",
-    "SHOW yb_enable_expression_pushdown;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "execute  stmt_util_metrics_snap_reset;\n",
-    "\n",
-    "explain (analyze, dist) \n",
-    "select '' _\n",
-    "    , *\n",
-    "from tbl_cities \n",
-    "where 1=1 \n",
-    " -- and country_id = 233\n",
-    " -- and country_code = 'US'\n",
-    " -- and state_id = 1416\n",
-    " -- and state_coude = 'CA'\n",
-    " and city_name = 'Alameda' \n",
-    " -- and city_id = 111088\n",
-    " -- and yb_hash_code(city_id) = yb_hash_code(111088)\n",
-    "-- limit 100\n",
-    ";"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Pushdown | Explain plan (above ^^)\n",
-    "- `Remote Filter: ((tbl_cities.city_name)::text = 'Alameda'::text)` is pushdown\n",
-    "- Pushdown filter is in DocDB (Remember, each tablet is a running rocksdb/docdb, and tablets are part of raft consensus group, e.g. tablet peers)\n",
-    "- Pushdown is faster because non-pushdown (YSQl/PostgreSQL Query Layer reuses) needs to remove rows from all results\n",
-    "- Stats are better\n",
-    "  - Planning Time: 0.062 ms\n",
-    "  - Execution Time: 966.344 ms\n",
-    "  - Peak Memory Usage: 8 kB\n",
-    "  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "execute  stmt_util_metrics_snap_table;"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Pushdown | Metrics (above ^^)\n",
-    "- All tablet leaders\n",
-    "- Seek in all tablet offsets\n",
-    "  - Next to read values after seek\n",
-    "  - Seek again for another value\n",
-    "  - Seek/next ratio is around 1:19+\n",
-    "- Performance of pushdown of filter revealed in explain plan stats"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Pushdown | Cleanup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SET yb_enable_expression_pushdown=off;\n",
-    "SHOW yb_enable_expression_pushdown;"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Enable Follower Reads\n",
-    "```\n",
-    "name        | yb_read_from_followers\n",
-    "setting     | off\n",
-    "description | Allow any statement that generates a read request to go to any node.\n",
-    "\n",
-    "name        | yb_follower_read_staleness_ms\n",
-    "setting     | 30000\n",
-    "description | Sets the staleness (in ms) to be used for performing follower reads.\n",
-    "```\n",
-    "Set to true = on, set to false = off.\n",
-    "\n",
-    "Also, other configurations such as:\n",
-    "- `set session characteristics as transaction read write;`\n",
-    "- hint, `/*+ Set(transaction_read_only on) */`\n",
-    "\n",
-    "For more details about this feature, review:\n",
-    "\n",
-    "https://docs.yugabyte.com/preview/explore/ysql-language-features/going-beyond-sql/follower-reads-ysql/#examples\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "set session characteristics as transaction read write;\n",
-    "set yb_read_from_followers=true;\n",
-    "SHOW yb_read_from_followers;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "execute  stmt_util_metrics_snap_reset;\n",
-    "explain (analyze, dist) \n",
-    "/*+ Set(transaction_read_only on) */\n",
-    "select '' _\n",
-    "    , *\n",
-    "from tbl_cities \n",
-    "where 1=1 \n",
-    " -- and country_id = 233\n",
-    " -- and country_code = 'US'\n",
-    " -- and state_id = 1416\n",
-    " -- and state_coude = 'CA'\n",
-    " and city_name = 'Alameda'\n",
-    " -- and city_id = 111088\n",
-    " -- and yb_hash_code(city_id) = yb_hash_code(111088)\n",
-    "-- limit 100\n",
-    ";\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Follower-reads | Explain plan (above ^^)\n",
-    "- Execution time would be better in \"real world\" (no host aliases)\n",
-    "  - Planning Time: 0.110 ms\n",
-    "  - Execution Time: 2613.345 ms\n",
-    "  - Peak Memory Usage: 8 kB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "\n",
-    "execute  stmt_util_metrics_snap_table;"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Follower-reads | Metrics (above ^^)\n",
-    "- Only from session host, 127.0.0.1 (can confirm by re-running connection to different) \n",
-    "- Uses tablet leader and followers on host (this works for RF=3 with a 3 node cluster)\n",
-    "- Seek in all tablet offsets\n",
-    "  - Next to read values after seek\n",
-    "  - Seek again for another value\n",
-    "  - Seek/next ratio is around 1:19+\n",
-    "- Performance of follower reads in explain plan stats"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#####  Rerun\n",
-    "- Restart notebook\n",
-    "- Clear output\n",
-    "- Change db_host from `127.0.0.1` to other, e.g. `127.0.0.3`\n",
-    "- Confirm session host\n",
-    "- Rerun all of q3c and review\n",
-    "- Restart notebook\n",
-    "- Clear output\n",
-    "- Change db_host from `127.0.0.3` to other, e.g. `127.0.0.1`"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Follower-reads | Plan and Metrics\n",
-    "- First pass is high cost\n",
-    "- Second is faster?"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Follower-reads | Cleanup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "set yb_read_from_followers=false;\n",
-    "SHOW yb_read_from_followers;"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Pushdown + Follower"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SET yb_enable_expression_pushdown=true;\n",
-    "SHOW yb_enable_expression_pushdown;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SET session characteristics as transaction read write;\n",
-    "SET yb_read_from_followers=true;\n",
-    "SHOW yb_read_from_followers;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "execute  stmt_util_metrics_snap_reset;\n",
-    "explain (analyze, dist) \n",
-    "/*+ Set(transaction_read_only on) */\n",
-    "select *\n",
-    "from tbl_cities \n",
-    "where 1=1 \n",
-    " -- and country_id = 233\n",
-    " -- and country_code = 'US'\n",
-    " -- and state_id = 1416\n",
-    " -- and state_coude = 'CA'\n",
-    " and city_name = 'Alameda'\n",
-    " -- and city_id = 111088\n",
-    " -- and yb_hash_code(city_id) = yb_hash_code(111088)\n",
-    "-- limit 100\n",
-    ";\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Pushdown + Follower | Explain plan (above ^^)\n",
-    "- Pushdown benefit, `  Remote Filter: ((tbl_cities.city_name)::text = 'Alameda'::text)`\n",
-    "- A little faster than just pushdown alone"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "\n",
-    "execute  stmt_util_metrics_snap_table;"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Pushdown + Follower | Metrics (above ^^)\n",
-    "- Only node host, same seeks and reads as above"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Pushdown + Follower | Cleanup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SET yb_enable_expression_pushdown=off;\n",
-    "SHOW yb_enable_expression_pushdown;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SET session characteristics as transaction read write;\n",
-    "SET yb_read_from_followers=off;\n",
-    "SHOW yb_read_from_followers;"
+    "YugabyteDB vs PostgreSQL\n",
+    "- YugabyteDB only updates the indexes of columns where there are key-values and subkey values changes.\n",
+    "- A Index Only Scan reads from the index tablet."
    ]
   },
   {
