--- a/05_Using_GIN_Indexes.ipynb
+++ b/05_Using_GIN_Indexes.ipynb
@@ -258,12 +258,12 @@
    "source": [
     "#%% python, but prepared statements as sql magic\n",
     "if (NB_GITPOD_WORKSPACE_URL is None):\n",
-    "    a = %sql select fn_yb_create_stmts()\n",
+    "    stmt = %sql select fn_yb_create_stmts()\n",
     "else:\n",
     "    WORKSPACE_URL = NB_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
-    "    a = %sql select fn_yb_create_stmts(:WORKSPACE_URL)\n",
+    "    stmt = %sql select fn_yb_create_stmts(:WORKSPACE_URL)\n",
     "\n",
-    "print (a)"
+    "print(stmt)"
    ]
   },
   {
@@ -3048,7 +3048,7 @@
    "metadata": {},
    "source": [
     "## 😊 Next up!\n",
-    "Continue your learning by opening the next notebook, `06_YSQL_Development_Advanced.ipynb'`. \n",
+    "Continue your learning by opening the next notebook, `06_Geo-partitioning.ipynb'`. \n",
     "\n",
     "Or, to open the notebook from GitPod, run the following:"
    ]
@@ -3064,7 +3064,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "gp open '06_YSQL_Development_Advanced.ipynb'"
+    "gp open '06_Geo-partitioning.ipynb'"
    ]
   }
  ],
