--- a/06_Geo-partitioning.ipynb
+++ b/06_Geo-partitioning.ipynb
@@ -14,7 +14,7 @@
     "<br>\n",
     "This notebook file is:\n",
     "\n",
-    "`06_YSQL_Development_Advanced.ipynb`\n",
+    "`06_Geo-partitioning.ipynb`\n",
     "\n"
    ]
   },
@@ -210,12 +210,12 @@
    "source": [
     "#%% python, but prepared statements as sql magic\n",
     "if (NB_GITPOD_WORKSPACE_URL is None):\n",
-    "    a = %sql select fn_yb_create_stmts()\n",
+    "    stmt = %sql select fn_yb_create_stmts()\n",
     "else:\n",
     "    WORKSPACE_URL = NB_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
-    "    a = %sql select fn_yb_create_stmts(:WORKSPACE_URL)\n",
+    "    stmt = %sql select fn_yb_create_stmts(:WORKSPACE_URL)\n",
     "\n",
-    "print (a)"
+    "print(stmt)"
    ]
   },
   {
