--- a/02_YSQL_Development.ipynb
+++ b/02_YSQL_Development.ipynb
@@ -34,9 +34,9 @@
     "## 🛠️ Requirements\n",
     "Here are the requirements for this notebook:\n",
     "- ✅ Create the notebook variables in `01_Lab_Setup.ipynb`, which you previously did\n",
-    "- ✅ Create the `ds_ybu` database, which you previously did\n",
+    "- ✅ Create the `db_ybu` database, which you previously did\n",
     "- ☑️ Import the notebook variables, *which you must do next*\n",
-    "- ☑️ Connect to the `ds_ybu` database, *which you must do next*\n",
+    "- ☑️ Connect to the `db_ybu` database, *which you must do next*\n",
     "- ☑️ Run through a series of DDL and DML scenarios\n",
     "  -  Basic of DDL and DML\n",
     "  -  Built-in Functions\n",
