--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -44,9 +44,9 @@
     "## 🛠️ Requirements\n",
     "Here are the requirements for this notebook:\n",
     "- ✅ Create the notebook variables in `01_Lab_Setup.ipynb`, which you previously did\n",
-    "- ✅ Create the `ds_ybu` database, which you previously did\n",
+    "- ✅ Create the `db_ybu` database, which you previously did\n",
     "- ☑️ Import the notebook variables, *which you must do next*\n",
-    "- ☑️ Connect to the `ds_ybu` database, *which you must do next*\n",
+    "- ☑️ Connect to the `db_ybu` database, *which you must do next*\n",
     "- ☑️ Complete the following sections\n",
     "  -  Hash Sharding\n",
     "  -  Range Sharding\n",
