--- a/04_Anatomy_of_an_Index.ipynb
+++ b/04_Anatomy_of_an_Index.ipynb
@@ -41,9 +41,9 @@
     "## 🛠️ Requirements\n",
     "Here are the requirements for this notebook:\n",
     "- ✅ Create the notebook variables in `01_Lab_Setup.ipynb`, which you previously did\n",
-    "- ✅ Create the `ds_ybu` database, which you previously did\n",
+    "- ✅ Create the `db_ybu` database, which you previously did\n",
     "- ☑️ Import the notebook variables, *which you must do next*\n",
-    "- ☑️ Connect to the `ds_ybu` database, *which you must do next*\n",
+    "- ☑️ Connect to the `db_ybu` database, *which you must do next*\n",
     "- ☑️ Complete the following sections\n",
     "  -  Create a secondary index using range sharding\n",
     "  -  Create a secondary index using hash sharding\n",
