--- a/06_Geo-partitioning.ipynb
+++ b/06_Geo-partitioning.ipynb
@@ -368,7 +368,8 @@
     "  - `tbl_order_changes_prtn_2023_02`\n",
     "  - `tbl_order_changes_prtn_2023_03`\n",
     "  - `tbl_order_changes_prtn_2023_04`\n",
-    "  - \n",
+    "  - `tbl_order_changes_prtn_default`\n",
+    "\n",
     "  The table partitions uses the following PK definition:\n",
     "  -  `PRIMARY KEY, lsm (user_id HASH, change_date DESC)`\n",
     "  \n",
@@ -766,7 +767,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "select pg_get_indexdef('tbl_order_changes_prtn_2023_04_change_date_idx':: regclass);_range':: regclass);"
+    "select pg_get_indexdef('tbl_order_changes_prtn_2023_04_change_date_idx':: regclass);"
    ]
   },
   {
@@ -1012,9 +1013,7 @@
     "\n",
     "DDL_TABLESPACE_AP=\"drop tablespace if exists tblspace_ap; create tablespace tblspace_ap with (replica_placement='{\"\\\"num_replicas\"\\\": 1, \"\\\"placement_blocks\"\\\": [{ \"\\\"cloud\"\\\": \"\\\"cloud1\"\\\", \"\\\"region\"\\\": \"\\\"region3\"\\\", \"\\\"zone\"\\\": \"\\\"zone3\"\\\", \"\\\"min_num_replicas\"\\\": 1}]}');\" \n",
     "\n",
-    "echo $DDL_TABLESPACE_AP | ./ysqlsh -d ${DB_NAME}\n",
-    "\n",
-    "\n"
+    "echo $DDL_TABLESPACE_AP | ./ysqlsh -d ${DB_NAME}"
    ]
   },
   {
@@ -1304,12 +1303,21 @@
    "metadata": {},
    "source": [
     "```\n",
-    "Append (actual time=3.112..125.423 rows=65535 loops=1)\n",
-    "  -> Seq Scan on public.tbl_transactions_prtn_us (actual time=3.112..120.394 rows=65535 loops=1)\n",
-    "        Output: ''::text, (tbl_transactions_prtn_us.tableoid)::regclass, tbl_transactions_prtn_us.user_id, tbl_transactions_prtn_us.account_id, tbl_transactions_prtn_us.geo_partition\n",
-    "        Remote Filter: (tbl_transactions_prtn_us.geo_partition = 'US'::text)\n",
-    "Planning Time: 0.255 ms\n",
-    "Execution Time: 128.625 ms\n",
+    "Append (cost=0.00..101.50 rows=1000 width=76) (actual time=2.902..118.470 rows=65535 loops=1)\n",
+    "  -> Seq Scan on tbl_transactions_prtn_us (cost=0.00..96.50 rows=1000 width=76) (actual time=2.901..113.355 rows=65535 loops=1)\n",
+    "        Remote Filter: (geo_partition = 'US'::text)\n",
+    "        Storage Table Read Requests: 64\n",
+    "        Storage Table Read Execution Time: 92.586 ms\n",
+    "Planning Time: 0.190 ms\n",
+    "Execution Time: 121.623 ms\n",
+    "Storage Read Requests: 64\n",
+    "Storage Read Execution Time: 92.586 ms\n",
+    "Storage Write Requests: 0\n",
+    "Catalog Read Requests: 1\n",
+    "Catalog Read Execution Time: 0.538 ms\n",
+    "Catalog Write Requests: 0\n",
+    "Storage Flush Requests: 0\n",
+    "Storage Execution Time: 93.123 ms\n",
     "Peak Memory Usage: 24 kB\n",
     "```"
    ]
@@ -1735,7 +1743,6 @@
     "---\n",
     "# 🌟🌟🌟🌟🌟🌟   All  done! \n",
     "In this notebook, you completed the following:\n",
-    "In this lab, you completed the following:\n",
     "- Created a partitioned table consisting of table partitions\n",
     "- Created tablespaces\n",
     "- Created table partitions assigned to the tabelspaces\n",
